src/objects/Project_Unit_Type__c.object
<CustomObject>
    <fields>
        <fullName>RDS_Code__c</fullName>
        <label>Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Description__c</fullName>
        <label>Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Plan_Layout__c</fullName>
        <label>Plan Layout</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RDS_Project_Id__c</fullName>
        <label>Project Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RDS_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Unit Types</relationshipLabel>
        <relationshipName>Project_Unit_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_Unique_Code__c</fullName>
        <label>Unique Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project Unit Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Unit Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Unit Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>